<resources>
    <string name="app_name">App Perritos</string>
    <string name="login">Login</string>
    <string name="id">Id</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="opcion">Seleccione una opción</string>

    <string name="perros">Perros</string>
    <string name="tiendas">Tiendas de mascotas</string>
    <string name="razas">Razas de perro</string>
    <string name="cliente">Personas</string>
    <string name="usuarios">Usuarios</string>

    <string name="ingresar_usuario">Registrar usuario</string>
    <string name="modificar_usuario">Modificar usuario</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="gestionar_usuario">Gestionar usuarios</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="ins_registrar_usuario">Ingrese los datos del usuario a registrar</string>
    <string name="ins_modificar_usuario">Ingrese los datos del usuario a modificar</string>

    <string name="ingresar_persona">Registrar persona</string>
    <string name="modificar_persona">Modificar persona</string>
    <string name="eliminar_persona">Eliminar persona</string>
    <string name="gestionar_persona">Gestionar personas</string>
    <string name="ins_registrar_persona">Ingrese los datos de la persona a registrar</string>
    <string name="ins_modificar_persona">Ingrese los datos de la persona a modificar</string>
    <string name="cedula_persona">Número de cédula</string>
    <string name="nombre_persona">Nombre</string>
    <string name="apellido_persona">Apellido</string>
    <string name="fecha_nac_persona">Fecha de nacimiento</string>

    <string name="ingresar_raza">Registrar raza de perro</string>
    <string name="modificar_raza">Modificar raza</string>
    <string name="eliminar_raza">Eliminar raza</string>
    <string name="gestionar_raza">Gestionar razas</string>
    <string name="ins_registrar_raza">Ingrese los datos de la raza a registrar</string>
    <string name="ins_modificar_raza">Ingrese los datos de la raza a modificar</string>
    <string name="nombre_raza">Nombre de raza</string>

    <string name="ingresar_perro">Registrar perro</string>
    <string name="modificar_perro">Modificar perro</string>
    <string name="eliminar_perro">Eliminar perro</string>
    <string name="gestionar_perro">Gestionar perros</string>
    <string name="ins_registrar_perro">Ingrese los datos del perro a registrar</string>
    <string name="ins_modificar_perro">Ingrese los datos del perro a modificar</string>
    <string name="sexo_perro">Sexo</string>
    <string name="edad_perro">Edad</string>
    <string name="color_perro">Color</string>
    <string name="id_tienda_perro">Id tienda de mascotas</string>

    <string name="ingresar_tienda">Registrar tienda de mascotas</string>
    <string name="modificar_tienda">Modificar tienda</string>
    <string name="eliminar_tienda">Eliminar tienda</string>
    <string name="gestionar_tienda">Gestionar tiendas de mascotas</string>
    <string name="ins_registrar_tienda">Ingrese los datos de la tienda de mascotas a registrar</string>
    <string name="ins_modificar_tienda">Ingrese los datos de la tienda de mascotas a modificar</string>
    <string name="nombre_tienda">Nombre tienda</string>
    <string name="direccion_tienda">Direccion</string>
    <string name="telefono_tienda">Telefono</string>
    <string name="latitud_tienda">Latitud</string>
    <string name="longitud_tienda">Longitud</string>
    <string name="mapa">Ver mapa</string>
    <string name="title_activity_maps">Map</string>

</resources>
