<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="300dp" android:id="@+id/linear_layout_perro" android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/textView21" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_id_perro_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/sexo_perro"
                android:layout_width="24dp"
                android:layout_height="wrap_content" android:id="@+id/textView23" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_sexo_perro_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/edad_perro"
                android:layout_width="26dp"
                android:layout_height="wrap_content" android:id="@+id/textView25" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_edad_perro_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/color_perro"
                android:layout_width="18dp"
                android:layout_height="wrap_content" android:id="@+id/textView27" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_color_perro_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nombre_raza"
                android:layout_width="20dp"
                android:layout_height="wrap_content" android:id="@+id/textView28" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_nombre_raza_perro_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/cedula_persona"
                android:layout_width="16dp"
                android:layout_height="wrap_content" android:id="@+id/textView32" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_cedula_persona_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/id_tienda_perro"
                android:layout_width="27dp"
                android:layout_height="wrap_content" android:id="@+id/textView36" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_id_tienda_mascotas_ly"
                android:layout_weight="1" android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/modificar_perro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_modificar_perro" android:layout_weight="1"
                android:textColor="@color/colorTextoButton" android:background="@color/colorButton"/>
        <Button
                android:text="@string/eliminar_perro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_eliminar_perro" android:layout_weight="1"
                android:textColor="@color/colorTextoButton" android:background="@color/colorButton"/>
    </LinearLayout>
</LinearLayout>
