<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="250dp" android:orientation="vertical"
              android:id="@+id/linear_layout_persona">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_id_persona_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/cedula_persona"
                android:layout_width="21dp"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_cedula_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nombre_persona"
                android:layout_width="27dp"
                android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_nombre_persona_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/apellido_persona"
                android:layout_width="15dp"
                android:layout_height="wrap_content" android:id="@+id/textView13" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_apellido_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/fecha_nac_persona"
                android:layout_width="23dp"
                android:layout_height="wrap_content" android:id="@+id/textView17" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_fecha_nac_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/modificar_persona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_modificar_persona" android:layout_weight="1"
                android:background="@color/colorButton" android:textColor="@color/colorTextoButton"/>
        <Button
                android:text="@string/eliminar_persona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_eliminar_persona" android:layout_weight="1"
                android:textColor="@color/colorTextoButton" android:background="@color/colorButton"/>
    </LinearLayout>
</LinearLayout>
