<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="150dp" android:id="@+id/linear_layout_raza" android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/id"
                android:layout_width="76dp"
                android:layout_height="match_parent" android:id="@+id/textView12" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_id_raza_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nombre_raza"
                android:layout_width="71dp"
                android:layout_height="match_parent" android:id="@+id/textView18" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_nombre_raza_ly" android:layout_weight="1"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="57dp">
        <Button
                android:text="@string/modificar_raza"
                android:layout_width="100dp"
                android:layout_height="wrap_content" android:id="@+id/btn_modificar_raza" android:layout_weight="1"
                android:textColor="@color/colorTextoButton" android:background="@color/colorButton"/>
        <Button
                android:text="@string/eliminar_raza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_eliminar_raza" android:layout_weight="1"
                android:background="@color/colorButton" android:textColor="@color/colorTextoButton"/>
    </LinearLayout>
</LinearLayout>
